# flappy-bird

./: CMakeLists.txt  README.md
include/: assetManager.hpp  inputManager.hpp  main.hpp  state.hpp  stateMachine.hpp
src/: assetManager.cpp  main.cpp  stateMachine.cpp
